should install 23.0.2 build tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ android:
   components:
     - build-tools-23.0.2
     - android-23
+    - tools
+    - extra-android-m2repository
     - extra
 script:
     - ./gradlew clean assembleRelease
